[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/examples/custom-dialog/custom-dialog.gd" type="Script" id=1]

[node name="CustomDialog" type="Node2D"]
z_index = 1
z_as_relative = false
script = ExtResource( 1 )

[node name="ResponseLabel" type="Label" parent="."]
margin_left = 200.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 40 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDialogButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 90.0
text = "Open Custom Dialog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Control" parent="."]
visible = false

[node name="DialogBackground" type="ColorRect" parent="Dialog"]
margin_left = 225.0
margin_top = 162.0
margin_right = 549.0
margin_bottom = 313.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderColorRect" type="ColorRect" parent="Dialog/DialogBackground"]
margin_left = 3.0
margin_top = 4.0
margin_right = 320.0
margin_bottom = 147.0
color = Color( 0.541176, 0.541176, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColorRect2" type="ColorRect" parent="Dialog/DialogBackground"]
margin_left = 5.0
margin_top = 6.0
margin_right = 318.0
margin_bottom = 145.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="Dialog/DialogBackground"]
pause_mode = 2
margin_left = 77.189
margin_top = 78.0
margin_right = 141.189
margin_bottom = 115.0
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="Dialog/DialogBackground"]
pause_mode = 2
margin_left = 185.74
margin_top = 78.0
margin_right = 249.74
margin_bottom = 115.0
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="Dialog/DialogBackground"]
margin_left = 89.0
margin_top = 39.0
margin_right = 242.0
margin_bottom = 70.0
text = "Do you like ColorRects?"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="Dialog/DialogBackground"]
pause_mode = 2
margin_left = 297.0
margin_top = 7.0
margin_right = 317.0
margin_bottom = 27.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OpenDialogButton" to="." method="_on_OpenDialogButton_pressed"]
[connection signal="pressed" from="Dialog/DialogBackground/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Dialog/DialogBackground/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="Dialog/DialogBackground/CancelButton" to="." method="_on_CancelButton_pressed"]
